--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,7 @@ services:
   nest-app:
     build:
       context: . # Build from the current directory
+      dockerfile: Dockerfile
     container_name: nest-app
     develop:
       watch:
@@ -47,6 +48,17 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    networks:
+      - app-network
+
+  flask:
+    build:
+      context: ./python_service
+      dockerfile: Dockerfile
+    ports:
+      - '5000:5000'
+    environment:
+      FLASK_SECRET: your-secure-secret-key
     networks:
       - app-network
 
