--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "migration:generate": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate -d ./src/data-source.ts ./src/migrations/migration"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.4.8",
     "@nestjs/typeorm": "^10.0.2",
     "argon2": "^0.41.1",
+    "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "form-data": "^4.0.1",
     "jpeg-js": "^0.4.4",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
@@ -38,6 +41,7 @@
     "python-shell": "^5.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "streamifier": "^0.1.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
