--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,4 @@ pids
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-/python_service/food101-vit-model
+# /python_service/food101-vit-model
